fixed some issue with show and hide functions and change some css to align hi hat perfectly

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ section{
 
 .hihat{
   top:11%;
-  left: 10.3%;
+  left: 11%;
   width: 16%;
 }
 
